// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesError component renders an error message when an error occurs in the DOM tree beneath it 1`] = `
<NotesError>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Note
        history={
          Object {
            "push": [Function],
          }
        }
        location=""
        match={
          Object {
            "params": Object {
              "noteId": "",
            },
          }
        }
      >
        <section
          className="notes"
        >
          <h2>
            Loading...
          </h2>
        </section>
      </Note>
    </Router>
  </BrowserRouter>
</NotesError>
`;

exports[`NotesError component renders the UI as expected 1`] = `
<NotesError>
  <BrowserRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <NotesList>
        <section
          className="notes"
        >
          <h2>
            Loading...
          </h2>
        </section>
      </NotesList>
    </Router>
  </BrowserRouter>
</NotesError>
`;
